Fix whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -565,7 +565,8 @@ li > a {
   vertical-align: top;
   display: inline-block;
 }
-details summary { cursor: s-resize }
+details summary
+  { cursor: s-resize }
 details details summary {
   z-index: 10
 }
